changing text, learning git

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body id="bg-gradient">
     <h1>BackGround Generator</h1>
-    <h2>Css color gradient</h2>
+    <h2>This is the background</h2>
     <input type="color" value="#00FF00" class="color1">
     <input type="color" value="#FF00FF" class="color2"><br><br>
     <button id="rdm-button">Random Generator</button>
@@ -19,6 +19,7 @@
     <script src="script.js">
     </script>
 </body>
+<!-- Css color gradient -->
 
 </html>
 
